--- a/OnToology/IVO.owl/documentation/sections/description-en.html
+++ b/OnToology/IVO.owl/documentation/sections/description-en.html
@@ -1,5 +1,5 @@
 <h2 id="desc" class="list">International Vaccine Ontology: Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
-This is a placeholder text for the description of your ontology. The description should include an explanation and a diagram explaining how the classes are related, examples of usage, etc.</span>
-<p>Conceptualization of the InternationalVaccineOntology.</p>
+Conceptualization of the InternationalVaccineOntology.
+</span>
 <center><img src="resources/images/IntVacOntology-main_concept.png" alt="IVO conceptualization" width="95%">   <figcaption>Diagram of the classes and properties of IVO.</figcaption></center></div>
