--- a/OnToology/IVO.owl/documentation/sections/introduction-en.html
+++ b/OnToology/IVO.owl/documentation/sections/introduction-en.html
@@ -1,7 +1,7 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
-This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.
-The IVO aims to delocalize the concept of vaccine in order to make it reusable for professionals in the field in any part of the globe
+The IVO aims to delocalize the concept of vaccine in order to make it reusable for professionals in the field in any part of the globe. It reuses concepts from other ontologies such us DRUGS4COVID or Vaccine Ontology.
+It also contains instances of classes to check its performance.
 </span>
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
